noinst_LIBRARIES = libhistory.a

libhistory_a_SOURCES = \
	historymanager.cpp \
	historymenu.cpp \
	historysubmenu.cpp \
	viewhistory.cpp


noinst_HEADERS = \
	historymanager.h \
	historymenu.h \
	historysubmenu.h \
	viewhistory.h \
	viewhistoryitem.h

AM_CXXFLAGS = @GTKMM_CFLAGS@
INCLUDES = -I$(top_srcdir)/src
