noinst_LIBRARIES = libimage.a

libimage_a_SOURCES = \
	imageadmin.cpp \
	preference.cpp \
	imagewin.cpp \
\
	imageareabase.cpp \
	imagearea.cpp \
	imageareaicon.cpp \
	imageareapopup.cpp \
\
	imageviewbase.cpp \
	imageview.cpp  \
	imageviewicon.cpp \
	imageviewpopup.cpp  

noinst_HEADERS = \
	imageadmin.h \
	preference.h \
	imagewin.h \
\
	imageareabase.h \
	imagearea.h \
	imageareaicon.h \
	imageareapopup.h \
\
	imageviewbase.h \
	imageview.h \
	imageviewicon.h \
	imageviewpopup.h 

AM_CXXFLAGS = @GTKMM_CFLAGS@
AM_CPPFLAGS = -I$(top_srcdir)/src
