sources = [
  'imageadmin.cpp',
  'imagearea.cpp',
  'imageareabase.cpp',
  'imageareaicon.cpp',
  'imageareapopup.cpp',
  'imageview.cpp',
  'imageviewbase.cpp',
  'imageviewicon.cpp',
  'imageviewpopup.cpp',
  'imagewin.cpp',
  'preference.cpp',
]


image_lib = static_library(
  'image', sources,
  dependencies : gtkmm_dep,
  include_directories : include_directories('..'),
)
