noinst_LIBRARIES = libmessage.a

libmessage_a_SOURCES = \
	messageadmin.cpp \
	messagewin.cpp \
	messageviewbase.cpp \
	messageview.cpp \
	post.cpp \
	toolbar.cpp \
	logmanager.cpp

noinst_HEADERS = \
	messageadmin.h \
	messagewin.h \
	messageviewbase.h \
	messageview.h \
	post.h \
	toolbar.h \
	logmanager.h

AM_CXXFLAGS = @GTKMM_CFLAGS@
INCLUDES = -I$(top_srcdir)/src
