noinst_LIBRARIES = libmessage.a

libmessage_a_SOURCES = \
	messageadmin.cpp \
	messagewin.cpp \
	messageviewbase.cpp \
	messageview.cpp \
	post.cpp \
	toolbar.cpp \
	logmanager.cpp \
	confirmdiag.cpp

noinst_HEADERS = \
	messageadmin.h \
	messagewin.h \
	messageviewbase.h \
	messageview.h \
	post.h \
	toolbar.h \
	logitem.h \
	logmanager.h \
	confirmdiag.h \
	logitem.h

AM_CXXFLAGS = @GTKMM_CFLAGS@
AM_CPPFLAGS = -I$(top_srcdir)/src
