sources = [
  'confirmdiag.cpp',
  'logmanager.cpp',
  'messageadmin.cpp',
  'messageview.cpp',
  'messageviewbase.cpp',
  'messagewin.cpp',
  'post.cpp',
  'toolbar.cpp',
]


message_lib = static_library(
  'message', sources,
  dependencies : gtkmm_dep,
  include_directories : include_directories('..'),
)
