noinst_LIBRARIES = libskeleton.a

libskeleton_a_SOURCES = \
	aamenu.cpp \
	admin.cpp \
	dispatchable.cpp \
	loadable.cpp \
	treeview.cpp \
	view.cpp \
	editview.cpp \
	dragnote.cpp \
	tablabel.cpp \
	tooltip.cpp \
	entry.cpp \
	login.cpp \
	panecontrol.cpp \
	hpaned.cpp \
	vpaned.cpp \
	notebook.cpp \
	vbox.cpp

noinst_HEADERS = \
	aamenu.h \
	admin.h \
	dispatchable.h \
	loadable.h \
	lockable.h \
	treeview.h \
	view.h \
	editview.h \
	dragnote.h \
	tablabel.h \
	imgbutton.h \
	spinbutton.h \
	popupwinbase.h \
	popupwin.h \
	tooltip.h \
	entry.h \
	label_entry.h \
	prefdiag.h \
	msgdiag.h \
	filediag.h \
	login.h \
	panecontrol.h \
	hpaned.h \
	vpaned.h \
	notebook.h \
	vbox.h

AM_CXXFLAGS = @GTKMM_CFLAGS@
INCLUDES = -I$(top_srcdir)/src
