noinst_LIBRARIES = libskeleton.a

libskeleton_a_SOURCES = \
	window.cpp \
	aamenu.cpp \
	admin.cpp \
	dispatchable.cpp \
	loadable.cpp \
	treeviewbase.cpp \
	treeview.cpp \
	view.cpp \
	editview.cpp \
	dragnote.cpp \
	tabnote.cpp \
	tablabel.cpp \
	imgbutton.cpp \
	imgtoolbutton.cpp \
	imgtogglebutton.cpp \
	imgtoggletoolbutton.cpp \
	menubutton.cpp \
	toolmenubutton.cpp \
	backforwardbutton.cpp \
	tooltip.cpp \
	entry.cpp \
	compentry.cpp \
	label_entry.cpp \
	login.cpp \
	prefdiag.cpp \
	selectitempref.cpp \
	msgdiag.cpp \
	aboutdiag.cpp \
	panecontrol.cpp \
	hpaned.cpp \
	vpaned.cpp \
	notebook.cpp \
	vbox.cpp \
	jdtoolbar.cpp \
	toolbar.cpp \
	textloader.cpp

noinst_HEADERS = \
	window.h \
	aamenu.h \
	admin.h \
	dispatchable.h \
	loadable.h \
	lockable.h \
	treeviewbase.h \
	treeview.h \
	view.h \
	editview.h \
	dragnote.h \
	tabnote.h \
	tablabel.h \
	imgbutton.h \
	imgtoolbutton.h \
	imgtogglebutton.h \
	imgtoggletoolbutton.h \
	menubutton.h \
	toolmenubutton.h \
	backforwardbutton.h \
	spinbutton.h \
	popupwinbase.h \
	popupwin.h \
	iconpopup.h \
	tooltip.h \
	entry.h \
	compentry.h \
	label_entry.h \
	prefdiag.h \
	selectitempref.h \
	msgdiag.h \
	aboutdiag.h \
	filediag.h \
	login.h \
	panecontrol.h \
	hpaned.h \
	vpaned.h \
	notebook.h \
	vbox.h \
	jdtoolbar.h \
	toolbar.h \
	textloader.h

AM_CXXFLAGS = @GTKMM_CFLAGS@
INCLUDES = -I$(top_srcdir)/src
