noinst_LIBRARIES = libskeleton.a

libskeleton_a_SOURCES = \
	window.cpp \
	aamenu.cpp \
	admin.cpp \
	dispatchable.cpp \
	loadable.cpp \
	treeviewbase.cpp \
	dragtreeview.cpp \
	edittreeview.cpp \
	editcolumns.cpp \
	view.cpp \
	editview.cpp \
	dragnote.cpp \
	tabnote.cpp \
	toolbarnote.cpp \
	viewnote.cpp \
	tablabel.cpp \
	tabswitchbutton.cpp \
	tabswitchmenu.cpp \
	imgbutton.cpp \
	menubutton.cpp \
	toolmenubutton.cpp \
	backforwardbutton.cpp \
	popupwinbase.cpp \
	popupwin.cpp \
	entry.cpp \
	compentry.cpp \
	label_entry.cpp \
	login.cpp \
	prefdiag.cpp \
	selectitempref.cpp \
	msgdiag.cpp \
	aboutdiag.cpp \
	detaildiag.cpp \
	panecontrol.cpp \
	hpaned.cpp \
	vpaned.cpp \
	notebook.cpp \
	vbox.cpp \
	jdtoolbar.cpp \
	toolbar.cpp \
	textloader.cpp \
	undobuffer.cpp

noinst_HEADERS = \
	window.h \
	aamenu.h \
	admin.h \
	dispatchable.h \
	loadable.h \
	lockable.h \
	treeviewbase.h \
	dragtreeview.h \
	edittreeview.h \
	editcolumns.h \
	view.h \
	editview.h \
	editviewdialog.h \
	dragnote.h \
	tabnote.h \
	toolbarnote.h \
	viewnote.h \
	tablabel.h \
	tabswitchbutton.h \
	tabswitchmenu.h \
	imgbutton.h \
	imgtoolbutton.h \
	menubutton.h \
	toolmenubutton.h \
	backforwardbutton.h \
	popupwinbase.h \
	popupwin.h \
	iconpopup.h \
	entry.h \
	compentry.h \
	label_entry.h \
	prefdiag.h \
	selectitempref.h \
	msgdiag.h \
	aboutdiag.h \
	detaildiag.h \
	editviewdialog.h \
	filediag.h \
	login.h \
	panecontrol.h \
	hpaned.h \
	vpaned.h \
	notebook.h \
	vbox.h \
	jdtoolbar.h \
	toolbar.h \
	textloader.h \
	undobuffer.h

AM_CXXFLAGS = @GTKMM_CFLAGS@
AM_CPPFLAGS = -I$(top_srcdir)/src
